# apiman

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.monkeycode/specs/2026-03-29-tauri-apifox-framework/: design.md
apiman/: index.html  package-lock.json  package.json
apiman/src-tauri/: tauri.conf.json
apiman/src-tauri/src/: lib.rs
apiman/src/router/: index.ts
apiman/src/stores/: api.ts  project.ts
apiman/src/types/: index.ts
apiman/src/views/: ApiDetailView.vue
docs/: 基本架构.md  子模块-01-前端工程基础与应用壳.md  子模块-02-路由骨架与页面布局-计划.md  子模块-02-路由骨架与页面布局-设计说明.md  应用设置UI设计.md  开发总计划.md  首页UI设计.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/component/: Header.tsx
src/components/AppShell/: AppShell.tsx
src/components/Page/: index.tsx
src/components/PageHeader/: index.tsx
src/components/ProjectCard/: index.tsx
src/components/common/: JsonEditor.vue
src/components/layout/: AppLayout.vue
src/pages/AppSettingsPage/: index.tsx
src/pages/HomePage/: index.tsx
src/pages/ProjectDocsPage/: index.tsx
src/pages/ProjectLayout/: index.tsx
src/router/: AppRouter.tsx  paths.ts
src/services/: bridge.ts
src/stores/: appPreferences.tsx
src/styles/: antd-theme.ts  antd-vars.css  theme-provider.tsx  theme.css
src/types/: app-settings.ts  app-shell.ts  project.ts
src/utils/: preferences.ts
src/views/: ApiListView.vue  ProjectView.vue
(+2 files in other folders)
