[package]
name = "apiman"
version = "0.1.0"
description = "Apiman"
authors = ["apiman"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "apiman"

[lib]
name = "apiman_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.3.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.0", features = [] }

